fixed overflow scroll regression in dropdowns

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -5422,7 +5422,7 @@ ul.tabs li.tab {
   margin: 0px;
   min-width: 100px;
   z-index: 1000;
-  max-height: 50%;
+  max-height: 70%;
   opacity: 0;
   will-change: width, height; }
   .dropdown-content li {
